--- a/software/stacks/sample/repository.yaml
+++ b/software/stacks/sample/repository.yaml
@@ -13,4 +13,4 @@ spec:
     /*
     # include shared components and this stack
     !/software/components/
-    !/software/stack/sample/
+    !/software/stacks/sample/
