fix: make start with ingress

--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,8 @@
 # =============================================================================
 
 # FLUX_ENABLED=true                      # GitOps with Flux
-# METALLB_ENABLED=false                  # Manual LoadBalancer support
-# INGRESS_ENABLED=false                  # Manual NGINX Ingress Controller
+# METALLB_ENABLED=true                   # Manual LoadBalancer support
+# INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
 
 # =============================================================================
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
