--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
   "recommendations": [
     "editorconfig.editorconfig",
-    "ms-vscode.vscode-yaml",
-    "redhat.vscode-xml"
+    "ms-vscode.vscode-yaml"
   ]
 }
