fix: Change API deployment strategy to Recreate for PVC compatibility
- Replace RollingUpdate with Recreate strategy for sample-api deployment
- Fixes scheduling deadlock where ReadWriteOnce PVC prevents rolling updates
- Ensures persistent storage can be properly claimed during deployments
- Brief downtime acceptable for storage persistence testing feature

Issue: New pods couldn't be scheduled because PVC was bound to old pods during rolling update
Solution: Recreate strategy terminates old pods first, freeing PVC for new pods

--- a/software/stacks/sample/applications/api/deployment.yaml
+++ b/software/stacks/sample/applications/api/deployment.yaml
@@ -8,6 +8,8 @@ metadata:
     hostk8s.application: api
 spec:
   replicas: 2
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: sample-api
