--- a/software/stacks/sample/applications/api/deployment.yaml
+++ b/software/stacks/sample/applications/api/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     app: sample-api
     hostk8s.application: api
 spec:
-  replicas: 2
+  replicas: 1
   strategy:
     type: Recreate
   selector:
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: node:18-alpine
+        image: mcr.microsoft.com/azurelinux/base/nodejs:20.14
         ports:
         - containerPort: 3000
         command:
@@ -138,11 +138,11 @@ spec:
           cd /app && npm init -y && npm install express && node server.js
         resources:
           requests:
-            memory: "64Mi"
+            memory: "128Mi"
             cpu: "50m"
           limits:
-            memory: "128Mi"
-            cpu: "100m"
+            memory: "256Mi"
+            cpu: "200m"
         volumeMounts:
         - name: storage-volume
           mountPath: /app/storage
@@ -161,7 +161,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: standard
   resources:
     requests:
       storage: 1Gi
