--- a/software/stacks/sample/applications/api/ingress.yaml
+++ b/software/stacks/sample/applications/api/ingress.yaml
@@ -6,15 +6,15 @@ metadata:
   labels:
     hostk8s.application: api
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - host: localhost
     http:
       paths:
-      - path: /api
-        pathType: Prefix
+      - path: /api(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: sample-api
