--- a/software/stacks/sample/applications/website/deployment.yaml
+++ b/software/stacks/sample/applications/website/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: website
-        image: nginx:alpine
+        image: mcr.microsoft.com/azurelinux/base/nginx:1.25
         ports:
         - containerPort: 80
         env:
