--- a/software/stacks/sample/applications/api/deployment.yaml
+++ b/software/stacks/sample/applications/api/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sample-api
-  namespace: sample-api
+  namespace: sample
   labels:
     app: sample-api
     hostk8s.application: api
@@ -164,14 +164,14 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /mnt/data/storage/sample-api-storage
+    path: /mnt/data/storage/sample
     type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: sample-api-storage
-  namespace: sample-api
+  namespace: sample
   labels:
     hostk8s.application: api
 spec:
