--- a/software/stacks/sample/applications/api/ingress.yaml
+++ b/software/stacks/sample/applications/api/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sample-api
-  namespace: sample-api
+  namespace: sample
   labels:
     hostk8s.application: api
   annotations:
