--- a/software/stacks/sample/applications/api/service.yaml
+++ b/software/stacks/sample/applications/api/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sample-api
-  namespace: sample-api
+  namespace: sample
   labels:
     hostk8s.application: api
 spec:
