fix: sample stack

--- a/software/stacks/sample/app/kustomization.yaml
+++ b/software/stacks/sample/app/kustomization.yaml
@@ -3,9 +3,11 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
-  - api-deployment.yaml
-  - api-service.yaml
-  - api-ingress.yaml
-  - website-deployment.yaml
-  - website-service.yaml
-  - website-ingress.yaml
+  - api/deployment.yaml
+  - api/service.yaml
+  - api/ingress.yaml
+  - api/storage.yaml
+  - web/deployment.yaml
+  - web/service.yaml
+  - web/ingress.yaml
+  - web/config-map.yaml
